<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:layout_gravity="top"
    android:background="@drawable/navbg"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:paddingTop="40dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/Nav_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nav_head1"
        android:paddingTop="80dp"

        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Nav_head2"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>